@@ -1,3 +1,12 @@
+2005-02-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gutils.c: Move doc comments inline.
+
+	* glib/ghash.h: Adjust some argument names.
+
+	* configure.in: Give meaningful names to g_memmove() 
+	arguments.
+
 2005-02-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* tests/keyfile-test.c (test_key_remove): Add test case for
