@@ -1,3 +1,9 @@
+2005-02-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/misc_utils.sgml: 
+	* glib/tmpl/hash_tables.sgml: Move some doc 
+	comments inline.
+
 2005-01-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gobject/tmpl/enumerations_flags.sgml: Fix an
